Successfully added addCategoryService

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "legacyWatch": false
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -39,6 +41,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
