--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "body-parser": "^2.2.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
