--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.1",
     "cookie-parser": "^1.4.7",
