--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
+    "redis": "^5.10.0",
     "tsx": "^4.21.0",
     "zod": "^4.3.5"
   },
