--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,16 @@ services:
       MONGO_INITDB_ROOT_USERNAME: pumpum
       MONGO_INITDB_ROOT_PASSWORD: jojo
     restart: unless-stopped
+  redis:
+    image: redis:7.2-bookworm
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisData:/data/redis
+    restart: unless-stopped
 volumes:
   mongoData:
+    driver: local
+  redisData:
     driver: local
